# NanoRender-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini
assets/materials/: default.json
assets/models/: triangle.gltf
assets/shaders/: basic.frag  basic.vert  present.frag  present.vert
assets/textures/: albedo.ppm
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake
examples/: CMakeLists.txt  main.cpp
include/Core/: Application.h  Input.h  ResourceHandle.h  ResourceRegistry.h  Timer.h  Window.h
include/Math/: Matrix4.h  Quaternion.h  SIMD_Math.h  Vector3.h
include/Platform/DirectX12/: DX12Device.h  DX12RenderAPI.h
include/Platform/Metal/: MetalDevice.h  MetalRenderAPI.h
include/Platform/OpenGL/: GLContext.h  GLMesh.h  GLRenderAPI.h  GLShader.h  GLTexture.h
include/Platform/Vulkan/: VKDevice.h  VKRenderAPI.h
include/Renderer/: CommandBuffer.h  Material.h  Mesh.h  MeshCache.h  MeshFactory.h  RenderAPI.h  RenderGraph.h  Shader.h  ShaderLoader.h  Texture.h  TextureLoader.h
include/Scene/: Camera.h  Octree.h  SceneGraph.h  Transform.h
src/: CMakeLists.txt
src/Core/: Application.cpp  Input.cpp  ResourceRegistry.cpp  Timer.cpp  Window.cpp
src/Math/: Matrix4.cpp  SIMD_Math.cpp  Vector3.cpp
src/Platform/DirectX12/: DX12Device.cpp  DX12RenderAPI.cpp
src/Platform/Metal/: MetalDevice.mm  MetalRenderAPI.mm
src/Platform/OpenGL/: GLContext.cpp  GLMesh.cpp  GLRenderAPI.cpp  GLShader.cpp  GLTexture.cpp
src/Platform/Vulkan/: VKDevice.cpp  VKRenderAPI.cpp
src/Renderer/: CommandBuffer.cpp  Material.cpp  Mesh.cpp  MeshCache.cpp  MeshFactory.cpp  RenderAPI.cpp  RenderGraph.cpp  Shader.cpp  ShaderLoader.cpp  Texture.cpp  TextureLoader.cpp
src/Scene/: Camera.cpp  Octree.cpp  SceneGraph.cpp  Transform.cpp
